--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
 certifi==2018.11.29
 chardet==3.0.4
 cycler==0.10.0
+dj-database-url==0.5.0
 Django==2.1.4
+gunicorn==19.9.0
 idna==2.7
 kiwisolver==1.0.1
 lxml==4.2.5
@@ -14,3 +16,4 @@ pytz==2018.7
 requests==2.20.1
 six==1.11.0
 urllib3==1.24.1
+whitenoise==4.1.2
